test/expressions/diten/uintDecimalOverflow.chpl
var d = 18446744073709551616;
writeln(d);

